@@ -114,6 +114,9 @@ Library
 
 - FileIO's mode attribute now always includes ``"b"``.
 
+- Issue #4861: ctypes.util.find_library(): Robustify. Fix library detection on
+  biarch systems. Try to rely on ldconfig only, without using objdump and gcc.
+
 Extension Modules
 -----------------
 
